--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,13 @@
   <title>music</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico?a=12">
+  <link rel="icon" type="image/x-icon" href="favicon.ico?a=1233">
 </head>
 
 <body>
+  <div style="display: none">
+    <audio id="app-audio" autoplay="autoplay"></audio>
+  </div>
   <app-root></app-root>
 </body>
 
