--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>music</title>
+  <title>Command Line Music</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico?a=1233">
@@ -11,9 +11,11 @@
 
 <body>
   <div style="display: none">
-    <audio id="app-audio" autoplay="autoplay"></audio>
+    <audio id="app-audio" ></audio>
   </div>
   <app-root></app-root>
+  <script>
+  </script>
 </body>
 
 </html>
